--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
-project(app_gestion_sheets LANGUAGES CXX)
+project(my_app LANGUAGES CXX)
 
-set(BINARY_NAME "app_gestion_sheets")
+set(BINARY_NAME "my_app")
 
 cmake_policy(SET CMP0063 NEW)
 
